# helios

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  QUESTIONS.md  README.md  TODO-LIST.md  compose.dev.yaml  compose.full.yaml  compose.prod.yaml  compose.yaml  config.example.toml  go.mod  go.sum  go.work  go.work.sum  main.go  pyproject.toml  scripts.py  wire.go  wire_gen.go
aegis/: Dockerfile  consts.go  example.toml  go.mod  go.sum  handler.go  init.go  main.go  mfa.go  middleware.go  password.go  profile.go  types.go  wire.go
app/: __init__.py  main.py
chaos/: .gitignore  Dockerfile  chaos.go  example.toml  go.mod  go.sum  handler.go  main.go
config/: example.toml
db/: 00-schema.sql  01-schema.sql  02-auth-schema.sql  Dockerfile  choosy.db  recipes.db  schema.sql  start.sh  stop.sh
docs/: aegis-auth-design.md  aegis-connection-design.md  api-query-design.md  challenge-api.md  challenge-design.md  docs.go  key-design.md  mfa-orchestration-design.md  passkey-welcome-back-design.md  relation-design.md  sfa-design.md  swagger.json  swagger.yaml  token-design.md  webauthn-login.md
environments/: generate-certs.sh
hermes/: Dockerfile  credential.go  cursor.go  example.toml  go.mod  go.sum  handler.go  key.go  main.go  provision.go  resource.go  service.go  types.go  user.go
iris/: credential.go  handler.go
pkg/: go.mod  go.sum
proto/: buf.gen.yaml  go.mod  go.sum
scripts/: .env.example  classify_ingredients.py  generate_keys.py  generate_tags.py  genkeys.go  genkeys.py  import_recipes.py  initialize-hermes.py  (+11 more)
(+696 files in other folders)
